# elastask

./: Cargo.toml  README.md  elastask.yaml
src/: config.rs  kibana.rs  main.rs  task.rs
