[package]
name = "elastask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
chrono = "0.4"
url = "2.2.2"
urlencoding = "2.1"
uuid = { version = "0.8", features = ["v4"] }
yaml-rust = "0.4"
